@@ -79,3 +79,5 @@ require_relative 'excel_functions/mid'
 require_relative 'excel_functions/pv'
 
 require_relative 'excel_functions/text'
+
+require_relative 'excel_functions/hlookup'
